kubernetes/apps/network/envoy-gateway/gateway/backendtrafficpolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: gateway-policy
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
  timeout:
    http:
      requestTimeout: 0s # Set to "0s" to disable the route timeout
  compression:
    - type: Brotli
    - type: Gzip
